--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -86,7 +86,7 @@ table.basic.qnaBoard td,
 table.basic.qnaBoard td a{color:#434343; font-size:12px; text-decoration:none;}
 /* goodsDetail */
 #container .content #detailContent{width:100%; height:500px;}
-#container .content #detailImgArea{width:40%; float:left; margin-right:100px;}
+#container .content #detailImgArea{width:40%; float:left; padding-top:80px; margin-right:100px;}
 #container .content #detailImgArea img{float:left;}
 #container .content #orderForm{width:40%; float:left; margin-bottom:28px;}
 
